--- a/STS.Workbench/TablesDiagram/ChartWizard/ChartTypeSelector.resx
+++ b/STS.Workbench/TablesDiagram/ChartWizard/ChartTypeSelector.resx
@@ -120,4 +120,127 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMkAAABqCAYAAAAWTnVFAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAlySURBVHhe7Z2/bxRHFMcPREEXFCmCAiUU+QPcpYmQJYR0
+        RYoUKShTuHCD5MIFRSSooHRE4xSWSGGJFJHSICEqiyYuKSgQSiIj5Q+wO4oUk3nrnb3Z8ZvdmfV7dzPm
+        +5U+i+/u7ez68b43++P5bvb3yUcDAOA5OTkxMAkAA8AkAIwAk1QCpCsu5w6YpBIgXXE5d8AklQDpisu5
+        AyapBEhXXM4dMEklQLricu6ASSoB0hWXc4eQSd6bx3dmZjaz3Nk1r9kYcB5SNHtk869AVB/2zJz+zx3b
+        B+0LiTrYNrP5nvnQPpymA7M9m5u98w3C5twhY5IXW+b20/fNz6+f3jUbL5gYcC5SxBW4BLzOFufBto3P
+        NcpkfTB7c7u9xqA1mOTtrrl9/1Xz8/79u+bxWyYGnIsUcQUuASuaRc49C0iIzFKDSSw0g5Cr3Yzi+Obb
+        283zly9fbl0PHF9cv97L1RAp4gpcAl40k9jXI0b5sDdf/K4upjm8mp8eotGMExxuseu47bScnagqMQkZ
+        xD/cCo1C0C+Yo5x4rViS9thhnmKkiCtwCYbUHGLZ36PBN4NXzVT8c6pien62bcu+lW+SyDrduqdPMrNX
+        JSbZvz9bnIfY85NZe+jlM6WAUqUVS9IeO8xTjBRxBS5Bqtw5Sc84Dmbm8B8PrtM+9jzkqZrDrVdmo/vl
+        tsw+E0Ov5SgnXiuWpD12mKcYKeIKXIJkte/0e7bgu3d/XyMmYdfp5E7UvZmoUUXnJGOUUpyl7AeJ4rlc
+        caSIK3AJODXnD37BW3WF3rz7L4q5iR2ZSWLr9M1D5ycwSSet4ixlP0gUz+WKI0VcgUsQU1PI9nfo8I6H
+        eq/5RoiZxIpdpzFG+5zl7GwDkyRJK5akPTaXKw5IV1zOHTDJiLTH5nLFAemKy7kDJhmR9thcrjggXXE5
+        d4iZhC4D0396rHerlOIsZT9IFB/mKQakKy7nDhmT0L2R1hy4mZguig/zFAPSFZdzh4hJUpoaSynOUvaD
+        RPFcrjhSRJvXIKoVdwH3bkDmbjsQl3OHiEmoqfG2a5UPbia63i1V1pjnKsHP4xApssOpwGu1XcDdvZfT
+        R82NxvNsmsu5Q34mWXJbytHxkZltpY+ttR+kKWOHeYqRItq8BqyK6QI+FZlm+I79sLicO8TOSbrzEP9n
+        D63i3DncsVN2+tha+0GaMnaYpxgpos1rwKuULuBT0SxW9ExCdFe3lty7tf7rupndSh9baz9IU8YO8xQj
+        RbR5DYbUOy/wzeBVbPcuT8+LdwFbBWabIi7nDjGTjDGlgMZ0/PH4tHXiSvrYGvvhNGVsLlccKaLNa5Aq
+        d07SM46DDBAWs/d4cJ32seehhZrXw36ufHE5d1Rtkmdvnp2aJGNsjf1wmjI2lyuOFNHmNUjWsruAhQxC
+        4nLuqNok936/B5N4os1rwKk5f/AL3qor9KB4m9iRmSS2Tt88Xhdwc/lZxiAkLueOak3y8T87Ztulql3I
+        qZoyNpcrjhTR5jWIqSlkG9DhHQ/1XvONEDOJFbtOY4z2OYszDHd4NjwTDYvLuaNak7z86yVMAomJy7mj
+        WpNsvtiESSAxcTl3yJokciORkC7OWz/fgkkgMXE5dwia5JXZuHO3+/ytEMniPPz3cGEQmAQSEJdzh5BJ
+        6GNOt8y+9yF1IZLF+fDgYaEmudb+lCYam8sVB6QrLucOEZN0vVuMSVQaHDctgUlWy1XLA8uRxR4GsjE8
+        fq6GgHTF5dwhYBLvw7JbNHu3moZG3yCtSVIltR9Ou7sU48BMUqu4nDtkT9yXcLjVNDQWYJI//qDXQvjY
+        mCieyxUHpCsu547qTNI0NK7QJIeHdh/W6XkOu8gQxXO54oB0xeXcIWuSAc5bnKSuoXEFJnn3zpjvv6fH
+        Q9hFhiieyxUoi6pM0jU0LtUkN8zmJv2bgl1kiOK5XIGyqMokXUPjEkxyfGzMw4eu+FOxiwxRPJcrUBbV
+        mKTX0BiSMfZY7Ed7+L+z44o+F7vIEMVzuQJlUY1Jeg2NIRljD8U+f+6KfSp2kSGK53IFykLIJP69Ep0/
+        3+01NIZkjM3FHhwYs7bmCv082EWGKD7MEygPEZP4n5ai9eF0vYbGkIyx/dg3b4yZz12BS2AXGaL4ME+g
+        POQPtxQ+LeVMQ2NIxtgUe3RkzL17rrAlsYsMUXyYJ1AewiahTuD+ZwGL9G6tWzhzOLh1WK5ZdixhcUvB
+        bXOYfv5AiciZhO62R85HCCqIHPnxa7+s8eZwjIxNV6yePAkLWgO7yBBMUgcyJiGDRD5N3jHVJGxDY8jA
+        2P0GRG3sIkMwSR0ImES3C5htaAxhxuYbELWxiwxRfJgnUB7yJ+4RppqEbWgM8cYebkDUxi4yBJPUQdEm
+        iTY0htjYtAZEbewiQzBJHRRtkmhDo8/2DRu7a/GLdVXYRYZgkjoo2iTRhkbiwTUzW3/UFmcp2EWGYJI6
+        KNckVxhjED9dNbP5lleYJWEXGYJJ6qBck3zNGOQHO7P0irI07CJDMEkdCJnEuwws9e2733nm+HHdzG68
+        aQuxZOwiQzBJHciYxOvXin3JaHYBbVlzbK7ZGeWlV4SlYxcZgknqQMQk4Xcm+jcTl/LFopVy6dKlLk+g
+        XERMQt+++/ht+zjyiSk3v/zqzHMxfvvzH/PZ5zfZ1zhyxs6JJUoZG6wO9ZkEgNpZ2jkJALUiY5KEq1sA
+        1IqQSQC4uMAkAIwAkwAwAkwCwAgwCQAjLM8kCX8HPwmlcffvuzvj3o1SEV6ZDe+uO64Gls8STKJ1eVjv
+        sjPd6+m+RfjFluz4Wm8WQA3MJGOQSSJfTDQJmKQ6YJIobqaKf5bYJMh03uEWuhPKByYZg8aXNopDc2wg
+        hopJFie9XgHUapJmRpE+eXdojg2kwEzCQCfuXSez8Lu95thAB5iExbtyJn4JWHNsoMHyTAJApcAkAIwA
+        kwAwAkwCwAgwCQAjwCQAjFCcSZrmQvVLr1rtINThi8u6F42yTOLf8xDuvu119irdxDs1OExy0SjKJL27
+        0c27stbdaJpVhMduDL5lNtBmcuEoziSLwyDFviYqaMn2925fFfcZrIxPzyQKh1qLGRAmuYh8Wodb0n9l
+        2EDGWFwQ0LnoAFbJJ3Pi3htbDcwkF5GyTGKh2UTj3XjxNy4OjYsCMMlFpDiTAFAaMAkAI8AkAIwAkwAw
+        AkwCwAgwCQAjwCQAjNCYhBYAgDgwCQAjwCQAjACTADACTALACDAJAIOcmP8B0Tz+1AljMNYAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAABnCAYAAABFEg2lAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAcHSURBVHhe7Z0/buM4FIeV3GExzWL3GNss0gQD+CBpDbjI
+        AbaaA6RJ4zJHSJMqyBlSDbBFjjDdllo+Sk8kpUdGlkiRjH4/zDeI/0iWH/iJlEVbzb+//msBADIQBIAA
+        EASAABCkApC0kWrOQJAKQNJGqjkDQSoASRup5gwEqQAkbaSaM/EFeX9sb5qmbYjbx/ZNeg64CCRtpJoz
+        8QV5PrV3z8L9YDFI2kg1Z5IIonsPBUSJw5w0/6iaJ8Cbj3N74JECcf/aPzAzr/dtczi3H/3NZXlt75tD
+        e163ErHmTHRB3t5/Dn8/HU/tk/UYWMacSI07BnKmDfP1Xj3/UkkW56M9H9TraTkrE+Tp+L398e7+/dff
+        N/rNXF9fmz3Ozvnt27dJ7XzMidS4YyCGeo/Ve/8YIVEqE8QeYjXHF+cxum9tSlhHrG2waxNiTqTGHQM5
+        1IOoxz2SfJwP+v1p+Dl6SHXohmXU04yGWOIy/Do90w6qRkEC0JtcmxLWEWsbpBpJzInUuGMQih5Wqfeh
+        sUWwWjI1/AO1YLq/uVdNvo8tiGeZYdnuTqHXgiCTlLCOWNsg1UhiTqTGHYO54WMQRxpG6DHs28Fl+tuW
+        P1YgyCQlrCPWNkg1kpgTqXHHYHb6PfxZNfZhr2/nE0HEZYbwQbnVA+lULMjbw/fJx7wQxKRmQfTxgt3Y
+        VYZGrvf6piHr537Sg/iWccWh45GvIkh/Nh2C+FOzIBTdiNV7GLDGQM5jtgQ+QVTEZbQU/X2KaS9TpSA/
+        2x/Hx/YJPUgwtA67NiGQtJFqzkQX5O3hpM99YIgVDgQpJ1LNmciCqN7j1nSJTdOdSecThR3UOHJjb2M+
+        5BpOQdJGqjmz+UG6+lcA6r8VWbs8BYKUE6nmTDJBJCCICQQpJ1LNmc0FWZsS1lGiILRJKfAm82xe5+Ti
+        pa89ilRzJoEgL+1dv+E4SPeH1mHXJsSc0CalQE7e2bzDuZXulj6JuOalpZoz0QXhT7G0KKNvFEIQk6oF
+        KWY2bxcSJnwmPhyp5kyaIVZ/ovDmwXw3hIAgJlULwifwPJL4TxTGns3bhXqvanoQA3qQUGgdbr38zAlt
+        UgpCcY4DbBGs1jrs3en+6LN5VUaiLYlUcya6IKEvTAGXce18zIlaXRLmho9BHGkYavzjhmzdDi7T37b8
+        MdGPj+dnXR6p5kz8HgRfmJoVWoddmxBzQpuUgtnZejZvJDkoUs2ZhEOsKRDEpGZB9PGC3dhVhkY+arj6
+        uZ/0IL5lXHGs2bz6I+Y4clCkmjMQZEH2LghFN2L1hAFrDOQ8ZkvgE0RFXEZL0d+nYFmkIVm4BwpHqjkD
+        QRYk1jZINZJA0kaqOZNAEDNhEScK/aF12LUJgaSNVHMmuiDmUywSxf1dLAhiAkHKiVRzJuEQC+dBQoEg
+        5USqOZNIEJqPZc6HMBDEBIKUE6nmTAJBSA53aIUThTJu3fwgaSPVnIksiPyNQn6c7lubEtYRaxvc2vlB
+        0kaqOZPwGGQKBDGBIOVEqjkDQRYEgnytSDVnkgkiXfoAgphcIgjIR3xBhkuwyYJIP05WHRBkN2zeg4gN
+        rjYgyG6AIEuAILthE0FwHkRmXDNQHjhIX5BY22DXBpRJMkEkIIgJBKkDCLIgEGQ/JBAE3weZE1qHXRtQ
+        JtEFMT9arUQ5Yrq7LxCkDqIL4v7sj3ugDkFMIEgdJBbE/U4IBDGBIHWQYIjFv81rvnKL8yAyUv1AWSQ4
+        SKcvTHUNAL/N6w+tw64NKJMEgviBICYQpA4gyIJAkP0AQRYEguyHJIJI87AICGICQeogriCBL0sREMQE
+        gtQBepAFgSD7YbUgT8fuI1173hUE+Ty0jnF9QHls0oPgROGUq6srp2agTDYdYv3+x5+T+y6lhHWU8j5A
+        epIIAsBXAYIAEACCABAAggAQAIIAEACCABAAggAQYBNB6IccuhNk08uybY98ebhtcC8wNP7VF1Ae6QWh
+        CYx8Mc/nU9uMLuy5NZ2smQSh93986f626wKKJbkg1CDNV2+n1y/cFN0oT+3dbSZBxjsLlgUUyyaCmKEE
+        DTFyDm/otXNug4LEoCEWeo8q2I0gpifLKAiGWNWxkyEWSWEOjju2l6Sc3hTMZXcH6bl7MacHyXk8BmaR
+        XhCFbhiZ9tpTcu653Z4MH/OWzyaCAFArEASAABAEgAAQBIAAEASAABAEgACVCFLGx6Pm42p8RLsXqhCk
+        iBNszutmnnQJNqPCIRb1Jhka5/NpckEg8PWpTxDak2eYJq7nUR37mbgYYu2GugTJOH8J86j2ST2CZJ7o
+        SIKYIVbO+VxgS+oQhPbYuWcB29uAHmQ3VCEIX2LBkHGYhWOQXVHfQToAGwJBAAgAQQAIAEEACABBAAgA
+        QQAIAEEACLD+esYI8oUDQRAkEAiCIN607f+pOtqLb0qjEAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAABnCAYAAABFEg2lAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAeySURBVHhe7Z09buNIEIXlucNiksXuMTZZODEM6BgbODXg
+        wAfYyAeYZBKHPoITR8acwdEAG/gIm23IZbVYVJN+XWqRXVRTfg/4YP1UN6VyPTWbbFGbf/79ryGEYGgQ
+        QgxoEEIMaJAVQPkK5VyhQVYA5SuUc4UGWQGUr1DOFRpkBVC+QjlXaJAVQPkK5VyhQVYA5SuUc6WAQX42
+        D1ebZrNpufre/IAxZA452vzd5t+BpN4fm638z5X71+6JTL3eN5vtY/Pe3Z2m1+Z+s20e53UCc67MN8jz
+        XXP57We4/ePbdXPzDGLILHKEirsEWB8L8/W+jT/WJJP13jxu2+0Fc9ZukLfvzeXtS7j9dHvdPLyBGDKL
+        HKHiLgGUjB6zP/1LSIxSu0FaZOQQN+tIovzx52V4/MuXL53bifLL16+DXFnkCBV3CbBkBGmfT5jk/XG7
+        f68aE3aptrvdMhlpRrtYsI1up+PjALUCg4g54l2ssUkEeXPH6Jh4r1iRd9/jPKXIESruElgKu1Xt+wjE
+        RogqWQp/KxUsj2/u25LvFBsk0aZvu3sQjForMMjT7WY/72jnI5tudytmSvHkyitW5N33OE8pcoSKuwS5
+        0jnIwDQKGDHi+2ab7n7kn0ir2MV6aW76N3bXPIEYee4YHRPvFSvy7nucpxQ5QsVdgmx1n/CPbbH3n/qx
+        DhgEtumlk/JoBApayRzkELUUZi2vQyTxKFeIHKHiLgFSmC/Exd6qL/Lwqb8v5BB7YARJtRkaR+YjNEiQ
+        V2HW8jpEEo9yhcgRKu4SpBSKuH0PPdE+0OC52AQpg7SCbYIpusdaPo4yNMhBecWKvPtGuUJQvkI5V2gQ
+        Q959o1whKF+hnCs0iCHvvlGuEJSvUM6VIgaRQ73yD0+txaqlMGt5HSKJH+cpBeUrlHNlvkHk3EdnDJ4o
+        zJfEj/OUgvIVyrky2yA5CxRrKcxaXodI4lGuEDmSzXuQ1IlX8w5OLh677ZFQzpXZBpEFipe63H10olDX
+        YhXnrxY5DCl/0fMrIc6jRY7a7lzAOu1q3v7cyu5eOIk4Z9Mo50rZEWTBpSZ6jP6Yvj1eh2pK3+M8pciR
+        bN4DqGpW8+4khrHPxNtCOVeKzEH6eUd8O8KjMGmQoWTzHmDVspp3Jxm9qh1BhP4o1oJrsWiQoWTzHlga
+        zANiI0TV2n+6y+PFV/O2GhltilDOlSIGOcSU4jkkGmQo2bwHudI5yMA0ihT/uJCj+2ab7n7kn73C8+P1
+        WccL5VyhQQx5941yhciRbN6DbC29mreQOUQo5woNYsi7b5QrRI5k8x4ghflCXOyt+iIfFW6IPTCCpNoM
+        jROt5g2HmMuYQ4RyrtAghrz7RrlC5Eg270FKoYjbgJ5oH2jwXGyClEFawTbBFN1jLWoWtEtmj0C2UM4V
+        GsSQd98oVwjKVyjnCg1iyLtvlCsE5SuUc6WcQRInCQWPwqRBqFJCOVcKGeSlubm67q+PNcajMGkQqpRQ
+        zpUCBpFLj941T9EF5MZ4FCYNQpUSyrky2yD9WixgELfFikJrEPj4yXltEQPIX/T8njhXFpSvUM6VmQaJ
+        LlzdwbVYcru7YUjix3lKQfkK5VwpN0nnLlZ3S253NwxJPMoVgvIVyrlCgxia2ndOM4lHuUJQvkI5V8oZ
+        xMCjMD+TQcjpoEEMTe07p5nEo1yRuqBBDE3tO6eZxKNckbqgQQxN7TunmcSjXJG6oEEMTe07p5nEo1yR
+        uihgkPhcCL9yK8ppJvHjPJH6mG2Q+KomS144jgYhS1B2F4tXNQnKaSbx4zyR+ihoEFnRO7w27+dciyXs
+        DHCIYf5IjZQxiJxFT8w/BCmGY5QTzxGELMF8g4g5Eld1VzwKkwYhSzDTIFzNq4pjc5pJ/DhPpD7KTtIT
+        eBQmDUKWgAYxNLXvnGYSj3JF6oIGMTS175xmEo9yReqCBjE0te+cZhKPckXqggYxNLXvnGYSj3JF6oIG
+        MTS175xmEo9yReqigEGiQ70L/sotDUKWYL5BovVXqR/09ChMGoQswWyDjH+jMD5R6LoWa+VcXFz0eSL1
+        Mtsg8iu3D2/d/cSVTX797fcPj1kcE+8VK9TSNzkdriMIIWtnkTkIIWtlvkEyjmIRslYKGISQ84UGIcSA
+        BiHEgAYhxIAGIcRgGYNkfG99Ek79Pt3qGe/oJGgRXpqb6Gw6j/rVj7NBvA4B+x1alnM5/a/1Pt+V7d/r
+        g4K4wRHEQgyS+FGgSdAgq4MGgegIlb7W1yTEcNEuFlcd1A8NYiH9lzaJ4tk3KUZxg+wnuNE/f60GCSNJ
+        6Ym64tk3KQVHkBEySe9XJBf+lPfsm/hAg3wgOkJW/DCvZ9/Eg2UMQshKoUEIMaBBCDGgQQgxoEEIMaBB
+        CDGoyiBhoaD74VWvJR6yUpeHbs+NegwSn9MovIp2sELX6QTdztw0yLlRjUEGZ5nDp7HXWWYZTQr3Hcx9
+        19xw6cjZUZVB9rs+juuUpJhLLmHvX6vjayYn43MZxGH3aj/y0SDnyOfZxSr97cCAmGI/+fc5wEBOyaeY
+        pA/6doMjyDlSj0FaZBTx+BTef0dF8TgAQIOcI1UZhJDaoEEIMaBBCDGgQQgxoEEIMaBBCDGgQQgxOO6H
+        wynqk4kGoShDNAhFJdU0/wMzd1VsVRpZTgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
