--- a/STS.Workbench/TablesDiagram/ChartWizard/ChartTypeSelector.resx
+++ b/STS.Workbench/TablesDiagram/ChartWizard/ChartTypeSelector.resx
@@ -243,4 +243,7 @@
         wynqk4kGoShDNAhFJdU0/wMzd1VsVRpZTgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>122, 17</value>
+  </metadata>
 </root>
