--- a/STS.Workbench/TablesDiagram/TablesDiagramPreview.resx
+++ b/STS.Workbench/TablesDiagram/TablesDiagramPreview.resx
@@ -129,6 +129,9 @@
   <metadata name="toolStripTableEdit.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>863, 15</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1012, 15</value>
+  </metadata>
   <metadata name="mStripTable.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>194, 17</value>
   </metadata>
